apps/helloapi/kubernetes/production/helloapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapi-deploy
  namespace: helloapi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: helloapi-pod
  template:
    metadata:
      labels:
        name: helloapi-pod
    spec:
      containers:
        - name: helloapi
          image: localhost:5000/app/helloapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          #args:
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 3
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /readiness
              port: 80
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 3
            failureThreshold: 4
