apps/helloapi/kubernetes/production/helloapi-ingress-domain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloapi-domain
  namespace: helloapi
spec:
  rules:
  - host: www.helloapi.lan
    http:
      paths:
        - backend:
            serviceName: helloapi-svc
            servicePort: 31081
